# etl_beam_app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  metadata.json  pyproject.toml  setup.py
etl_beam_app/: main.py  settings.py
etl_beam_app/base/: base_connector.py  base_etl.py  base_extract.py  base_load.py  base_model.py  base_response.py  base_transform.py
etl_beam_app/connectors/: simple_connector.py
etl_beam_app/dataflows/sample_dataflow/: sample_dataflow.py  sample_model.py  sample_transformation.py
etl_beam_app/etl/: extract.py
etl_beam_app/models/: person.py
tests/base/: test_base_model.py  test_base_response.py  test_etl.py
